...
                                    <rect key="frame" x="0.0" y="0.0" width="375" height="77"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" spacing="12" translatesAutoresizingMaskIntoConstraints="NO" id="I5m-DV-Pgi">
                                            <rect key="frame" x="15" y="11" width="345" height="55"/>
                                            <subviews>
                                                <imageView contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="safari" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="GWX-Xv-GpQ" customClass="ThumbnailImageView" customModule="Hackers" customModuleProvider="target">
                                                    <rect key="frame" x="0.0" y="0.5" width="60" height="54"/>
                                                    <color key="backgroundColor" name="groupedTableViewBackgroundColor"/>
                                                    <color key="tintColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                                    <gestureRecognizers/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" constant="60" id="5b9-dr-XXc"/>
...
                                    <outlet property="leftPaddingConstraint" destination="v8c-dX-oBF" id="rTP-84-rsa"/>
                                    <outlet property="separatorView" destination="yXr-Oq-Vwx" id="DR3-7N-DDB"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                        <userDefinedRuntimeAttributes>
                            <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="CommentsTableView"/>
                        </userDefinedRuntimeAttributes>
                        <connections>
                            <outlet property="dataSource" destination="evu-Yh-MGy" id="4V2-pz-xZ2"/>
                            <outlet property="delegate" destination="evu-Yh-MGy" id="qal-AS-qcf"/>
                        </connections>
                    </tableView>
...
            </objects>
            <point key="canvasLocation" x="4916" y="1397"/>
        </scene>
        <!--Settings Navigation Controller-->
        <scene sceneID="CQx-j9-MSt">
            <objects>
                <navigationController title="Settings" id="9fT-2D-AhL" userLabel="Settings Navigation Controller" sceneMemberID="viewController">
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="W1w-PO-Odu">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <connections>
                        <segue destination="uZL-eS-tCe" kind="relationship" relationship="rootViewController" id="pTj-b8-FVB"/>
...
                                        <rect key="frame" x="16" y="317.5" width="343" height="43.5"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="b2z-TO-21M" id="Nqt-rx-GbL">
                                            <rect key="frame" x="0.0" y="0.0" width="316.5" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Account" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="EN8-wt-Iug">
                                                    <rect key="frame" x="16" y="12" width="63.5" height="20.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                    <nil key="textColor"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
